# hostess

./: .gitignore  Cargo.toml  workspace.code-workspace
doc/: devlog.md
examples/: hello.rs
examples/some-multiplayer-game/: Cargo.toml
hostess/: Cargo.toml
hostess/src/: game.rs  game_server.rs  host.rs  lib.rs  lobby.rs  protocols.rs  server.rs  typed_game.rs  untyped_game_server.rs
sample/: Cargo.toml
sample/public/: index.html
sample/src/: app.rs  bot.rs  client.rs  input.rs  lib.rs  main.rs  msg.rs  platform.rs  player.rs  server.rs  simulation.rs  state.rs  thing.rs
sample/src/client/: client.rs  mod.rs  platform.rs
sample/src/server/: mod.rs
src/: bincoded.rs  game_server.rs  host.rs  lib.rs  lobby.rs  manager.rs  protocols.rs  server.rs  shared.rs
src/client/: mod.rs  tungstenite_client.rs
src/game_server/: mod.rs
src/hostess/: host.rs  lobby.rs  mod.rs
src/manager/: host.rs  lobby.rs  mod.rs
src/master/: host.rs  instance.rs  lobby.rs  mod.rs
src/server/: mod.rs
tests/: basics.rs
