[package]
name = "hostess"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8.2", features = ["v4", "wasm-bindgen", "serde"]}
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}
futures-util = "0.3.17"
bincode = {version = "1.3.3"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
warp = "0.3.1"
tokio = { version = "1", features = ["full"] }
