[package]
name = "sample"
version = "0.1.0"
edition = "2018"

[lib]
name="sample_lib"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"
hostess = {path = "../hostess"}
env_logger = "0.8.4"